Correction de la position des boutons dans le style CSS pour un alignement optimal.

--- a/src/style.css
+++ b/src/style.css
@@ -180,7 +180,7 @@ nav ul li {
    .buttons {
       position: relative;
       bottom: 457px;
-      left: 164px;
+      left: 185px;
       width: 8rem;
       height: 4.1rem;
       display: flex;
